5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1845_2222.log
== TEST (2019-06-26 13:17:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(input("matrizes"))
N = input("dimensao da matriz: ")
mat = zeros((N,N), dtype=int)
for i in range(mat)
-- ERROR:
File "XXXX", line 6
    for i in range(mat)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:18:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(input("matrizes"))
N = input("dimensao da matriz: ")
mat = zeros((N,N), dtype=int)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:18:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(input("matrizes"))

print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:19:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(input("matrizes"))

print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:19:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(input("matrizes"))

print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:23:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array([[10,8,2],[20,16,4][40,32,8]])
n = shape(matriz)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:23:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array([[10,8,2],[20,16,4],[40,32,8]])
n = shape(matriz)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:27:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array([[10,8,2],[20,16,4],[40,32,8]])
n = shape(matriz)
pinc = 0
for i in range(matriz):
	for j in range(matriz):
		if (i = j):
			princ = princ + sum(matriz)
	print(pinc)
			
-- ERROR:
File "XXXX", line 8
    if (i = j):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:27:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array([[10,8,2],[20,16,4],[40,32,8]])
n = shape(matriz)
pinc = 0
for i in range(matriz):
	for j in range(matriz):
		if (i == j):
			princ = princ + sum(matriz)
	print(pinc)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:28:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array([[10,8,2],[20,16,4],[40,32,8]])
n = shape(matriz)
pinc = 0
for j in range(matriz):
	for i in range(matriz):
		if (i == j):
			princ = princ + sum(matriz)
	print(pinc)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
